# octool

./: .gitignore  .octool.sample.toml  BUILD.bazel  CREDITS  Makefile  README.md  WORKSPACE  go.mod  go.sum
.circleci/: config.yml
cmd/octool/: BUILD.bazel  main.go
cmd/octool/config/: BUILD.bazel  config.go
