load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/atpons/octool/cmd/octool",
    visibility = ["//visibility:private"],
    deps = [
        "//cmd/octool/config:go_default_library",
        "//vendor/golang.org/x/crypto/ssh/terminal:go_default_library",
    ],
)

go_binary(
    name = "octool",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
